<resources>
    <string name="app_name">Pencauy</string>
    <string name="txtUsr">Usuario</string>
    <string name="strpass">Password</string>
    <string name="strLogin">Login</string>
    <string name="title_activity_listado_tablaposiciones">ListadoTablaposiciones</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Loguearse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Esta direccion de email es invalida</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_network">No hay red, verifica tu conexion</string>
    <string name="strLog">Login</string>
    <string name="txtListadoPencas">Listado de pencas</string>
    <string name="txtListadoParticipantes">Listado de participantes</string>
    <string name="title_activity_login">Login</string>
    <string name="txtPtos">Puntos</string>
    <string name="txtNick">Nickname</string>
    <string name="Seleccionetxt">Seleccione una opcion</string>
    <string name="ip"></string>
    <string name="urlbase">http://172.16.117.246:8080/PencaUyLocal-Backoffice-servicios/rest/api/</string>
    <string name="pencastxt">pencas</string>
    <string name="solicitudestxt">Solicitar participacion</string>
    <string name="apuestastxt">apuestas</string>
    <string name="pencatxt">penca:</string>
    <string name="nombrePencatxt">Penca nombre:</string>
    <string name="txtNoPartido">Numero de partido: </string>
    <string name="equipoLoctxt">equipoLoc</string>
    <string name="txtListaPartidos">Lista de partidos</string>
    <string name="nombretxt">nombre: </string>
    <string name="nrotxt">nro</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="logotxt">Logo</string>
    <string name="title_activity_config">Configuracion</string>
</resources>
