<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="195dp"
                    android:layout_height="29dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/txtNoPartido"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/noPartidotv"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/noPartidotv2"
                    android:layout_width="96dp"
                    android:layout_height="21dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nrotxt"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView52"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/fechaPartidotv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="2"
                android:lineSpacingExtra="10sp"
                android:text="fecha"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="113dp" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/equipoLoctv2"
                    android:layout_width="107dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/equipoLoctxt"
                    app:layout_constraintBottom_toBottomOf="@+id/equipovistv2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/equipovistv2" />

                <EditText
                    android:id="@+id/golesLocET2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:nextFocusForward="@+id/golesvisET2"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@+id/equipoLoctv2"
                    app:layout_constraintStart_toEndOf="@+id/equipoLoctv2"
                    app:layout_constraintTop_toTopOf="@+id/equipoLoctv2" />


                <EditText
                    android:id="@+id/golesvisET2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="39dp"
                    android:layout_marginTop="100dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="@+id/golesLocET2"
                    app:layout_constraintEnd_toStartOf="@+id/equipovistv2"
                    app:layout_constraintStart_toEndOf="@+id/golesLocET2"
                    app:layout_constraintTop_toBottomOf="@+id/golesLocET2" />

                <TextView
                    android:id="@+id/equipovistv2"
                    android:layout_width="174dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@+id/golesvisET2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/golesvisET2" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/golesvisET2"
                    app:layout_constraintStart_toStartOf="@+id/golesLocET2"
                    app:layout_constraintTop_toBottomOf="@+id/golesvisET2">

                    <RadioButton
                        android:id="@+id/locRb2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="local"
                        android:textSize="8sp" />

                    <RadioButton
                        android:id="@+id/visitaRB2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="visita"
                        android:textSize="8sp" />
                </RadioGroup>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnenv2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_weight="2"
        android:allowUndo="true"
        android:text="enviar"
        android:textAlignment="center"
        android:textSize="4dp"

        />

</LinearLayout>